# cpp_course

./: .gitignore
Basics/: 10_keywords.cpp  11_keywords.cpp  11_operators.cpp  12_identifiers.cpp  13_if-else.cpp  14_if-else-if-else.cpp  15_loggicalOperatorsifElse.cpp  16_ternaryOperator.cpp  1_writingFirstCppCode.cpp  2_cout_endl_etc.cpp  6_variables.cpp  7_dataTypes.cpp  8_more_on_variables.cpp  9_strings.cpp  CMakeLists.txt  readme.md
